改造1 TimeLineの画像サイズ変更 画像の最大添付数を10に変更 文字を投稿できないように リプライボタンの削除 ...

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "rails-ujs": "^5.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-giphy-selector": "^0.0.1",
     "react-hotkeys": "^0.10.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-immutable-pure-component": "^1.1.1",
